# Mipt-pay

./: README.md  pyproject.toml
docs/: README.md
docs/How2/: Linux_macOS.md  Windows.md
miptpay/tests/: sampledata.py
src/: __init__.py
src/account/: account.py  accountfactory.py
src/admin/: admin.py
src/banking/: bank.py  client.py  clientbuilder.py  crosspayment.py  crosspaymentsystem.py
src/deprecated/: main.py  old_main.py  user_interface.py
src/miptpaydj/: manage.py
src/miptpaydj/mainapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
src/miptpaydj/mainapp/static/css/: home.css  main.css  material_login.css  styles.css
src/miptpaydj/mainapp/static/js/: home.js
src/miptpaydj/mainapp/templates/: accounts.html  banks.html  base.html  clients.html  home.html  index.html  material_base.html  material_get.html  material_put.html  material_transfer.html  persons.html  plans.html  profile.html  transactions.html
src/miptpaydj/mainapp/templates/registration/: login.html  register.html
src/miptpaydj/miptpaydj/: asgi.py  settings.py  urls.py  wsgi.py
src/operators/: adaptors.py  dataoperator.py  timekeeper.py
src/plan/: plan.py  planfactory.py  planproperty.py
src/tools/: accesstools.py
src/transaction/: transaction.py
src/users/: person.py
